Improved warp isolation tooltip consistency

--- a/src/main/resources/assets/warpdrive/lang/de_de.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_de.lang
@@ -254,7 +254,7 @@ tile.warpdrive.detection.cloaking_core.name=Tarnfeld Kern
 tile.warpdrive.detection.monitor.name=Monitor
 tile.warpdrive.detection.radar.name=Radar
 tile.warpdrive.detection.warp_isolation.name=Warp-Feld Isolations Block
-tile.warpdrive.detection.warp_isolation.formatted_tooltip=Place up to %5$d m away from a ship core\nUsing %1$d to %3$d isolation blocks will absorb %2$d %% to %4$d %% of radar waves
+tile.warpdrive.detection.warp_isolation.tooltip.usage=Place up to %5$d m away from a ship core\nUsing %1$d to %3$d isolation blocks will absorb %2$d %% to %4$d %% of radar waves
 
 tile.warpdrive.detection.siren_industrial.basic.name=Standard Industrielle Sirene
 tile.warpdrive.detection.siren_industrial.advanced.name=Weiterentwickelte Industrielle Sirene
