--- a/src/main/resources/assets/warpdrive/lang/zh_cn.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_cn.lang
@@ -185,11 +185,14 @@ item.warpdrive.tool.tuning_fork.black.name=黑色音叉
 item.warpdrive.tool.tuning_fork.tooltip.usage=§b右击方块§7调节水晶频率\n§b潜行右击§7轮替水晶
 
 
+tile.warpdrive.decoration.bedrock_glass.name=基岩玻璃
 tile.warpdrive.decoration.decorative.energized.name=能量方块
 tile.warpdrive.decoration.decorative.network.name=网络方块
 tile.warpdrive.decoration.decorative.plain.name=平坦方块
 tile.warpdrive.decoration.gas.name=气密方块
-tile.warpdrive.decoration.bedrock_glass.name=基岩玻璃
+tile.warpdrive.decoration.lamp_bubble.name=Bubble Lamp
+tile.warpdrive.decoration.lamp_flat.name=Flat Lamp
+tile.warpdrive.decoration.lamp_long.name=Long Lamp
 
 
 tile.warpdrive.passive.iridium_block.name=铱块
