Added enantiomorphic reactor frames

--- a/src/main/resources/assets/warpdrive/lang/de_de.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_de.lang
@@ -274,6 +274,9 @@ tile.warpdrive.detection.siren_military.tooltip.usage=Lässt einen Alarm bis zu 
 tile.warpdrive.energy.enan_reactor_core.basic.name=Standard Enantiomorpher Reaktorkern
 tile.warpdrive.energy.enan_reactor_core.advanced.name=Weiterentwickelte Enantiomorpher Reaktorkern
 tile.warpdrive.energy.enan_reactor_core.superior.name=Überlegene Enantiomorpher Reaktorkern
+tile.warpdrive.energy.enan_reactor_frame.basic.name=Standard Enantiomorpher Reaktorkern Frame
+tile.warpdrive.energy.enan_reactor_frame.advanced.name=Weiterentwickelte Enantiomorpher Reaktorkern Frame
+tile.warpdrive.energy.enan_reactor_frame.superior.name=Überlegene Enantiomorpher Reaktorkern Frame
 tile.warpdrive.energy.enan_reactor_laser.name=Enantiomorper Reaktor Stabilisierungs Laser
 tile.warpdrive.energy.capacitor.creative.name=Null-Punkt-Modul
 tile.warpdrive.energy.capacitor.creative.tooltip=Kreativ Subraum Kondensator
