--- a/src/main/resources/assets/warpdrive/lang/fr_fr.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_fr.lang
@@ -272,6 +272,9 @@ tile.warpdrive.detection.siren_military.tooltip.usage=Emet une alarme audible à
 tile.warpdrive.energy.enan_reactor_core.basic.name=Noyau de réacteur Enantiomorphic basique
 tile.warpdrive.energy.enan_reactor_core.advanced.name=Noyau de réacteur Enantiomorphic avancé
 tile.warpdrive.energy.enan_reactor_core.superior.name=Noyau de réacteur Enantiomorphic supérieur
+tile.warpdrive.energy.enan_reactor_frame.basic.name=Structure de réacteur Enantiomorphic basique
+tile.warpdrive.energy.enan_reactor_frame.advanced.name=Structure de réacteur Enantiomorphic avancé
+tile.warpdrive.energy.enan_reactor_frame.superior.name=Structure de réacteur Enantiomorphic supérieur
 tile.warpdrive.energy.enan_reactor_laser.name=Laser de stabilisation pour réacteur Enantiomorphic
 tile.warpdrive.energy.capacitor.creative.name=Extracteur du potentiel de point zéro
 tile.warpdrive.energy.capacitor.creative.tooltip=Condensateur subspatial creatif
