--- a/src/main/resources/assets/warpdrive/lang/nl_nl.lang
+++ b/src/main/resources/assets/warpdrive/lang/nl_nl.lang
@@ -272,6 +272,9 @@ tile.warpdrive.detection.siren_military.tooltip.usage=Je kan deze Sirene vanaf %
 tile.warpdrive.energy.enan_reactor_core.basic.name=Normale Enantiomorfe Reactor Kern
 tile.warpdrive.energy.enan_reactor_core.advanced.name=Geavanceerde Enantiomorfe Reactor Kern
 tile.warpdrive.energy.enan_reactor_core.superior.name=Superieure Enantiomorfe Reactor Kern
+tile.warpdrive.energy.enan_reactor_frame.basic.name=Normale Enantiomorphic Reactor Frame
+tile.warpdrive.energy.enan_reactor_frame.advanced.name=Geavanceerde Enantiomorphic Reactor Frame
+tile.warpdrive.energy.enan_reactor_frame.superior.name=Superieure Enantiomorphic Reactor Frame
 tile.warpdrive.energy.enan_reactor_laser.name=Enantiomorfe Stabilizatielaser
 tile.warpdrive.energy.capacitor.creative.name=Nullpunt Module
 tile.warpdrive.energy.capacitor.creative.tooltip=Creative Subruimte Condensator
