--- a/src/main/resources/assets/warpdrive/lang/ru_ru.lang
+++ b/src/main/resources/assets/warpdrive/lang/ru_ru.lang
@@ -272,6 +272,9 @@ tile.warpdrive.detection.siren_military.tooltip.usage=Sounds an alarm up to %1$d
 tile.warpdrive.energy.enan_reactor_core.basic.name=Basic Ядро энантиоморфного реактора
 tile.warpdrive.energy.enan_reactor_core.advanced.name=Advanced Ядро энантиоморфного реактора
 tile.warpdrive.energy.enan_reactor_core.superior.name=Superior Ядро энантиоморфного реактора
+tile.warpdrive.energy.enan_reactor_frame.basic.name=Basic Frame энантиоморфного реактора
+tile.warpdrive.energy.enan_reactor_frame.advanced.name=Advanced Frame энантиоморфного реактора
+tile.warpdrive.energy.enan_reactor_frame.superior.name=Superior Frame энантиоморфного реактора
 tile.warpdrive.energy.enan_reactor_laser.name=Лазер стабилизации энантиоморфного реактора
 tile.warpdrive.energy.capacitor.creative.name=Zero-Point Module
 tile.warpdrive.energy.capacitor.creative.tooltip=Creative Subspace Capacitor
