--- a/src/main/resources/assets/warpdrive/lang/zh_cn.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_cn.lang
@@ -272,6 +272,9 @@ tile.warpdrive.detection.siren_military.tooltip.usage=探测半径%1$d米
 tile.warpdrive.energy.enan_reactor_core.basic.name=Basic 镜像体反应堆芯
 tile.warpdrive.energy.enan_reactor_core.advanced.name=Advanced 镜像体反应堆芯
 tile.warpdrive.energy.enan_reactor_core.superior.name=Superior 镜像体反应堆芯
+tile.warpdrive.energy.enan_reactor_frame.basic.name=Basic Enantiomorphic Reactor Frame
+tile.warpdrive.energy.enan_reactor_frame.advanced.name=Advanced Enantiomorphic Reactor Frame
+tile.warpdrive.energy.enan_reactor_frame.superior.name=Superior Enantiomorphic Reactor Frame
 tile.warpdrive.energy.enan_reactor_laser.name=镜像体反应堆稳定激光
 tile.warpdrive.energy.capacitor.creative.name=零点模块
 tile.warpdrive.energy.capacitor.creative.tooltip=创造子空间电容
