--- a/src/main/resources/assets/warpdrive/lang/en_us.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_us.lang
@@ -271,6 +271,9 @@ tile.warpdrive.detection.siren_military.tooltip.usage=Sounds an alarm up to %1$d
 tile.warpdrive.energy.enan_reactor_core.basic.name=Basic Enantiomorphic Reactor Core
 tile.warpdrive.energy.enan_reactor_core.advanced.name=Advanced Enantiomorphic Reactor Core
 tile.warpdrive.energy.enan_reactor_core.superior.name=Superior Enantiomorphic Reactor Core
+tile.warpdrive.energy.enan_reactor_frame.basic.name=Basic Enantiomorphic Reactor Frame
+tile.warpdrive.energy.enan_reactor_frame.advanced.name=Advanced Enantiomorphic Reactor Frame
+tile.warpdrive.energy.enan_reactor_frame.superior.name=Superior Enantiomorphic Reactor Frame
 tile.warpdrive.energy.enan_reactor_laser.name=Enantiomorphic Reactor Stabilization Laser
 tile.warpdrive.energy.capacitor.creative.name=Zero-Point Module
 tile.warpdrive.energy.capacitor.creative.tooltip=Creative Subspace Capacitor
